vlib/v/checker/tests/empty_arr_to_generic_param_err.vv
fn t[T](a []T) {}

struct Foo {}

fn (t &Foo) t[T](a []T) {}

fn main() {
	t([])
	Foo{}.t([])
}
